# ms-thesis

./: .gitignore  README.md  case_exploration_log.md  experiment_findings.md  llvm-version.txt  llvm_passes.txt  mlir-opt-passes.txt  thesis-summary.md  thesis_stmt.txt
bench_outputs/: rpi_summary.txt  summary.txt
benchmarks/: bench_adjacent_tiles.c  bench_dynamic_split.c  bench_tiling_noinline.c  bench_vectorize_split.c  run_benchmarks.sh  vectorize_split.mlir
case-study-harnesses/: bench.h  bench_double_invariant.c  bench_matrix_row_split.c  bench_split_accumulate.c  bench_subview_noalias.c  run_benchmarks.sh  vectorize_split.mlir
case-study-kernels/: adjacent_tiles.mlir  column_split.mlir  double_invariant.mlir  dynamic_split.mlir  noinline_two_pairs.mlir  three_way_split.mlir  tiling_noinline.mlir
cases/: case1_hoist_candidate.md  case1_noalias_func.md  case2_memref_subview_static.md  case_adjacent_tiles.md  case_dynamic_split.md  case_hoist_candidate.md  case_matrix_row_split.md  case_tiling_noinline.md  case_vectorize_split.md
cgeist-tests/: restrict.c  subview_hoist_static.c
docs/: benchmark-cross-platform.md  benchmark-rpi3b.md  benchmark-rpi4b.md  benchmark-rpi5.md  final-benchmark-evaluation.md  implementation-log.md  pass-build-notes.md  project-brief.md  thesis-summary.md
final_benchmark/: README.md  benchmark.md  benchmark_plan.md  cross_compile_rpi_final.sh  run_mac_final_median_benchmarks.sh  run_rpi_final_benchmarks.sh  run_rpi_final_median_benchmarks.sh
invalid_cases/: case_distinct_args.md  (+4 more)
pass/tools/: CMakeLists.txt  alias-meta-opt.cpp
(+645 files in other folders)
